Fix whitespace

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,7 +262,7 @@ input[type="radio"] {
 }
 
 .reply {
-    padding-top: 1.5rem;
+    padding: 1.5rem 0;
     border-top: 1.5px solid #ddd;
 }
 
